--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,27 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.transformicon-hamburguer {
-  position: fixed;
-  width: 3rem;
-  height: 2rem;
-  background: none;
-  border: 0;
+.tcon-menu {
+  position: sticky;
+  top: calc(50% - 10% * 0.5);
+  left: calc(50% - 10% * 0.5);
+  width: 5rem;
+  height: 5rem;
   outline: 0;
   overflow: 0;
-}
-.cross.active {
-  &:before,
-  &:after {
-    top: calc(50% * 3);
-    left: 0;
-    opacity: 1;
-    transition-delay: 0.5s;
-  }
-
-  &:before {
-    transition-delay: 0.7s;
-  }
 }
 
 .bar.active {
@@ -48,50 +35,57 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  top: 0;
-  left: 0;
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  top: 34px;
+  left: 9.5px;
+  width: 30px;
+  height: 4px;
 }
 .bar {
   display: block;
   width: 100%;
-  height: 5px;
+  height: 4px;
   background: #fff;
   margin: auto;
   position: relative;
   transition: all 0.2s;
+  border: 1px solid white;
+  border-radius: 10px;
 
   &:nth-child(1) {
-    top: -10px;
-    transition-delay: 0.5s;
+    top: -6px;
+    transition-delay: 0.25s;
   }
 
   &:nth-child(2) {
     top: calc(25% - 25%);
-    transition-delay: 0.4s;
+    transition-delay: 0.2s;
   }
 
   &:nth-child(3) {
-    top: 10px;
-    transition-delay: 0.1s;
+    top: 6px;
+    transition-delay: 0.15s;
   }
 }
 .cross {
-  left: 0;
-  top: 0;
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  top: -82px;
+  left: 4.5px;
+  width: 100%;
+  height: 100%;
 
   &:before,
   &:after {
     content: '';
     display: block;
-    width: 50px;
+    width: 40px;
     height: 5px;
     background: #fff;
+    position: absolute;
     top: calc(50% - 15% / 2);
     opacity: 0;
+    border: 1px solid white;
+    border-radius: 10px;
   }
 
   &:before {
@@ -104,5 +98,18 @@
     transition: all 0.2s;
     transform: rotate(-45deg);
     transition-delay: 0.2s;
+  }
+}
+.cross.active {
+  &:before,
+  &:after {
+    top: calc(50% * 3);
+    left: 0;
+    opacity: 1;
+    transition-delay: 0.15s;
+  }
+
+  &:before {
+    transition-delay: 0.25s;
   }
 }
