--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+div {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* Animation Menu Icon  */
 .tcon-menu {
   position: sticky;
   top: calc(50% - 10% * 0.5);
