--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -143,6 +143,25 @@ body {
   width: 0;
 }
 
+.link {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  position: relative;
+}
+
+.link:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: '';
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #00e0d5;
+  transition: width 0.2s ease 0s, left 0.2s ease 0s;
+  width: 0;
+}
+
 a:hover:after {
   width: 100%;
   left: 0;
