--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -9,12 +9,11 @@ body {
 
 /* Animation Menu Icon  */
 .tcon-menu {
-  position: sticky;
+  position: absolute;
   top: calc(50% - 10% * 0.5);
   left: calc(50% - 10% * 0.5);
   width: 5rem;
   height: 5rem;
-  outline: 0;
   overflow: 0;
 }
 
@@ -124,7 +123,7 @@ body {
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1em;
   display: inline-block;
   padding-bottom: 8px;
   padding-top: 8px;
