--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -184,3 +184,15 @@ a:hover:after {
 .animate-delay-400 {
   animation-delay: 400ms;
 }
+.animate-delay-500 {
+  animation-delay: 500ms;
+}
+.animate-delay-1000 {
+  animation-delay: 1000ms;
+}
+.animate-delay-2000 {
+  animation-delay: 2000ms;
+}
+.animate-delay-2500 {
+  animation-delay: 2500ms;
+}
