--- a/app/animation.css
+++ b/app/animation.css
@@ -1,8 +1,8 @@
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
   visibility: visible !important;
 }
 
